# jcc

./: README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{cookiecutter.repo_name}}/: .env.copy  Dockerfile  README.md  pyproject.toml
{{cookiecutter.repo_name}}/docs/: project_charter.md
{{cookiecutter.repo_name}}/scripts/: docker_run.sh  download_cache.sh  upload_cache.sh
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: bash_runner.py  cache.py  utils.py  {{cookiecutter.repo_name}}.ipynb
